--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <a-scene
         vr-mode-ui="enabled: false"
 		embedded
-        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.025 0.025 0.025" gps-entity-place="longitude: -97.826302; latitude: 30.065189;" animation-mixer/>
+        arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:858; displayWidth:1280; displayHeight:858; debugUIEnabled: false;'>
+        <a-image src="./assets/main_rebuild.jpg" look-at="[gps-camera]" gps-entity-place="longitude: -97.826302; latitude: 30.065189;" />
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
 </body>
